Add identity and enter and exit logic

--- a/BuildingManager/BuildingManager/Views/BuildingActivities/Create.cshtml
+++ b/BuildingManager/BuildingManager/Views/BuildingActivities/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuildingManager.Models.BuildingActivity
+﻿@model BuildingManager.Models.BuildingActivityViewModel
 
 @{
     ViewData["Title"] = "Create";
