--- a/BuildingManager/BuildingManager/Views/BuildingActivities/Index.cshtml
+++ b/BuildingManager/BuildingManager/Views/BuildingActivities/Index.cshtml
@@ -1,20 +1,51 @@
-﻿@model IEnumerable<BuildingManager.Models.BuildingActivity>
+﻿@model IEnumerable<BuildingManager.Models.BuildingActivityViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Building Overview</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<p>
-    <h3>There are currently @Model.Count() users in the building</h3>
-</p>
+@if (User.Identity.IsAuthenticated)
+{
+    if (ViewBag.InBuilding ?? false)
+    {
+        <p>
+            <a asp-action="Exit">Exit the building</a>
+        </p>
+    }
+    else
+    {
+        <p>
+            <a asp-action="Create">Enter the building</a>
+        </p>
+    }
+}
+@switch (Model.Count())
+{
+    case 0:
+        <p>
+            <h3> There are currently no users in the building.</h3>
+        </p>
+        break;
+    case 1:
+        <p>
+            <h3> There is @Model.Count() users in the building currently.</h3>
+        </p>
+        break;
+    default:
+        <p>
+            <h3> There are currently @Model.Count() users in the building.</h3>
+        </p>
+        break;
+}
+
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.IdentificationNumber)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Motive)
             </th>
@@ -24,26 +55,40 @@
             <th>
                 @Html.DisplayNameFor(model => model.ExpectedExitDate)
             </th>
-            <th></th>
+            <th>User within the expected time</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Motive)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ArrivalDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ExpectedExitDate)
-            </td>
-            <td>
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-               
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr class="@(item.OverTime? "bg-danger" : "bg-transparent")">
+                <th>
+                    @Html.DisplayFor(modelItem => item.IdentificationNumber)
+                </th>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Motive)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ArrivalDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ExpectedExitDate)
+                </td>
+
+                @if (item.OverTime)
+                {
+                    <td>
+                        Yes
+                    </td>
+                }
+                else
+                {
+                    <td>
+                        No
+                    </td>
+                }
+
+            </tr>
+        }
     </tbody>
 </table>
