--- a/BuildingManager/BuildingManager/Views/Shared/_Layout.cshtml
+++ b/BuildingManager/BuildingManager/Views/Shared/_Layout.cshtml
@@ -11,19 +11,28 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="BuildingActivity" asp-action="Index">BuildingManager</a>
+                <a class="navbar-brand" asp-area="" asp-controller="buildingactivities" asp-action="Index">BuildingManager</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                    <ul class="navbar-nav flex-grow-0 align-self-lg-center">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li>
+                                <a class="nav-link text-dark" asp-controller="BuildingUser" asp-action="Logout">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a class="nav-link text-dark" asp-controller="BuildingUser" asp-action="Create">SignUp</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-dark" asp-controller="BuildingUser" asp-action="Login">Login</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -37,7 +46,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - BuildingManager - <a asp-area="" asp-controller="BuildingActivity" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - BuildingManager - <a asp-area="" asp-controller="buildingactivities" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
