--- a/BuildingManager/BuildingManager/Views/BuildingActivities/Index.cshtml
+++ b/BuildingManager/BuildingManager/Views/BuildingActivities/Index.cshtml
@@ -55,7 +55,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.ExpectedExitDate)
             </th>
-            <th>User within the expected time</th>
+            <th>Uver Overtime</th>
         </tr>
     </thead>
     <tbody>
