--- a/BuildingManager/BuildingManager/Views/BuildingUser/Create.cshtml
+++ b/BuildingManager/BuildingManager/Views/BuildingUser/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuildingManager.Models.BuildingUser
+﻿@model BuildingManager.Models.BuildingUserView
 
 @{
     ViewData["Title"] = "Create";
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="UserPassword" class="control-label"></label>
-                <input asp-for="UserPassword" class="form-control" />
+                <input asp-for="UserPassword" type="password" class="form-control" />
                 <span asp-validation-for="UserPassword" class="text-danger"></span>
             </div>
             <div>
