--- a/BuildingManager/BuildingManager/Views/Shared/_Layout.cshtml
+++ b/BuildingManager/BuildingManager/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - BuildingManager - <a asp-area="" asp-controller="buildingactivities" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - BuildingManager 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
